--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,42 @@
 {
   "name": "Arabic Code Ciphering",
   "short_name": "Arabic Cipher",
-  "start_url": ".",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#2c3e50",
   "theme_color": "#2c3e50",
   "description": "An Arabic text ciphering application with serial key activation.",
   "icons": [
     {
-      "src": "/icons/android-chrome-192x192.png",
+      "src": "./icons/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icons/android-chrome-512x512.png",
+      "src": "./icons/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/icons/apple-touch-icon.png",
+      "src": "./icons/apple-touch-icon.png",
       "sizes": "180x180",
       "type": "image/png"
     },
     {
-      "src": "/icons/favicon-16x16.png",
+      "src": "./icons/favicon-16x16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "/icons/favicon-32x32.png",
+      "src": "./icons/favicon-32x32.png",
       "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "./icons/android-chrome-144x144.png",
+      "sizes": "144x144",
       "type": "image/png"
     }
   ]
