--- a/manifest.json
+++ b/manifest.json
@@ -1,43 +1,41 @@
 {
-  "name": "Arabic Code Ciphering",
-  "short_name": "Arabic Cipher",
-  "start_url": "./index.html",
-  "scope": "./",
+  "name": "Arab Cipher App",
+  "short_name": "Cipher",
+  "id": "/arab-cipher-app/",
+  "start_url": "/arab-cipher-app/",
   "display": "standalone",
-  "background_color": "#2c3e50",
-  "theme_color": "#2c3e50",
-  "description": "An Arabic text ciphering application with serial key activation.",
+  "background_color": "#ffffff",
+  "theme_color": "#2196f3",
+  "orientation": "portrait",
+  "scope": "/arab-cipher-app/",
+  "description": "تطبيق تشفير النصوص العربية باستخدام رموز سرية.",
   "icons": [
     {
-      "src": "./icons/android-chrome-192x192.png",
+      "src": "icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "./icons/android-chrome-512x512.png",
+      "src": "icons/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "./icons/apple-touch-icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
+      "src": "icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
-      "src": "./icons/favicon-16x16.png",
-      "sizes": "16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "./icons/favicon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "./icons/android-chrome-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
+      "src": "icons/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
-  ]
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  }
 }
