--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Arab Cipher App",
   "short_name": "Cipher",
   "id": "/arab-cipher-app/",
-  "start_url": "/arab-cipher-app/",
+  "start_url": "./?source=pwa",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2196f3",
